--- a/chart/manifest.json
+++ b/chart/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "Mecelle Chart",
+  "name": "Mecelle Chart",
   "icons": [
     {
       "src": "favicon.ico",
